Added DB Connection ,login,jwt authorization

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost:5432;Database=Invenure;User Id=postgres;password=Jismy@2001"
+  },
+  "Jwt": {
+    "Key": "MySuperLongSecretKeyThatIsSecure123!",
+    "Issuer": "track",
+    "Audience": "YourAppUsers",
+    "ExpireMinutes": 60
+  }
 }
