--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7020;http://localhost:5119",
+      "applicationUrl": "https://localhost:7020;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
